<resources>
    <string name="app_name">Muviminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">2373027829542330</string>
    <string name="fb_login_protocol_scheme">fb2373027829542330</string>
    <string name="facebook_client_token">3e3cb0de1fb912e7e4fc6229f6c4a425</string>
    <string name="tv_shows_most_popular"> TV Dizileri </string>
    <string name="read_More">Daha fazla oku</string>
    <string name="read_Less">Daha az oku</string>
    <string name="u2022">•</string>
    <string name="website">Website</string>
    <string name="bolumler">Bölümler</string>


</resources>