<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="tvShowImageUrl"
            type="String" />

        <variable
            name="tvShowName"
            type="String" />

        <variable
            name="networkCountry"
            type="String" />

        <variable
            name="status"
            type="String" />

        <variable
            name="startedDate"
            type="String" />

        <variable
            name="description"
            type="String" />

        <variable
            name="rating"
            type="String" />

        <variable
            name="genre"
            type="String" />

        <variable
            name="runtime"
            type="String" />

        <import type="android.view.View">

        </import>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        tools:context=".activities.TVShowDetailActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/sliderViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.viewpager2.widget.ViewPager2>

                <View
                    android:id="@+id/viewFadingEdge"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/background_fading_edge"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/sliderViewPager">

                </View>

                <LinearLayout
                    android:id="@+id/layoutSliderIndicators"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_8sdp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/viewFadingEdge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageTvShow">

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageBack"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/background_back_button"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorTextIcons">

                </ImageView>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageTvShow"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:imageURL="@{tvShowImageUrl}"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/sliderViewPager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sliderViewPager"
                    app:riv_corner_radius="@dimen/_6sdp">

                </com.makeramen.roundedimageview.RoundedImageView>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{tvShowName}"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageTvShow"
                    app:layout_constraintTop_toBottomOf="@id/sliderViewPager">

                </TextView>

                <TextView
                    android:id="@+id/tvNetworkCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{networkCountry}"
                    android:textColor="@color/colorTextOther"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/tvName"
                    app:layout_constraintStart_toStartOf="@id/tvName"
                    app:layout_constraintTop_toBottomOf="@id/tvName">

                </TextView>

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{status}"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@android:color/holo_green_light"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/tvName"
                    app:layout_constraintStart_toStartOf="@id/tvName"
                    app:layout_constraintTop_toBottomOf="@id/tvNetworkCountry">

                </TextView>


                <TextView
                    android:id="@+id/tvStarted"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text='@{"Başlangıç tarihi: " +startedDate}'
                    android:textColor="@color/colorTextOther"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/tvName"
                    app:layout_constraintStart_toStartOf="@id/tvName"
                    app:layout_constraintTop_toBottomOf="@id/tvStatus">

                </TextView>


                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:maxLines="4"
                    android:text="@{description}"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_11ssp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/imageTvShow">

                </TextView>

                <TextView
                    android:id="@+id/tvReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/read_More"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/tvDescription"
                    app:layout_constraintTop_toBottomOf="@id/tvDescription">

                </TextView>

                <View
                    android:id="@+id/viewDivider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorTextSecondary"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/tvReadMore">
                    
                </View>
                
                <LinearLayout
                    android:id="@+id/layoutMisc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider1">


                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/round_star"
                        app:tint="@color/colorTextOther">

                    </ImageView>


                    <TextView
                        android:id="@+id/textRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@{rating}"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:includeFontPadding="false"
                        android:text="@string/u2022"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_13ssp">

                    </TextView>

                    <TextView
                        android:id="@+id/tvGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@{genre}"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:includeFontPadding="false"
                        android:text="@string/u2022"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_13ssp">

                    </TextView>

                    <TextView
                        android:id="@+id/tvRuntime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@{runtime}"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp">

                    </TextView>



                </LinearLayout>

                <View
                    android:id="@+id/viewDivider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorTextSecondary"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/layoutMisc">

                </View>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnWebsite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/website"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    android:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnEpisodes"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider2">

                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEpisodes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/bolumler"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="#212121"
                    android:visibility="gone"
                    android:backgroundTint="@color/colorTextOther"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnWebsite"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider2">

                </com.google.android.material.button.MaterialButton>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
        



        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE,default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ProgressBar>

    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>